RDCC-6528-Address_Sonar_issues